// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has error 1`] = `
<label
  className="MuiFormLabel-root MuiInputLabel-root root MuiInputLabel-animated Mui-error Mui-error"
/>
`;

exports[`is disabled 1`] = `
<label
  className="MuiFormLabel-root MuiInputLabel-root root MuiInputLabel-animated Mui-disabled Mui-disabled"
/>
`;

exports[`renders correctly props object 1`] = `
<label
  className="MuiFormLabel-root MuiInputLabel-root root addClass MuiInputLabel-animated"
  htmlFor="textId"
>
  test text
</label>
`;
